<resources>
    <string name="app_name">أذكار المسلم</string>
    <string name="sabah_str">أذكار الصباح</string>
    <string name="masaa_str">أذكار المساء</string>
    <string name="istekad_str">الاستيقاظ</string>
    <string name="jwamia_str">جوامع الدعاء</string>
    <string name="some_thing_wrong">Something went wrong</string>
    <string name="sleep_str">قبل النوم</string>
    <string name="finished_str">تم بحمد الله</string>
    <string name="already_finished_str">لقد قمت بانهاء هذا الذكر بالفعل</string>
    <string name="salli">صل على النبيﷺ</string>
    <string name="yes_str">نعم</string>
    <string name="title_of_dialog">رسالة تاكيد</string>
    <string name="confirm_message">لم تنته من اذكارك بعد. \n\nهل تود الخروج؟</string>
    <string name="no_str">لا</string>
    <string name="sanad_and_thwab_str">صحة الحديث و ثوابه</string>
    <string-array name="athkar_masaa">

        <item name="1"> اللَّهُمَّ أَنْتَ رَبِّي لاَ إِلَهَ إِلَّا أَنْت َ، خَلَقْتَنِي وَأَنَا عَبْدُكَ ، وَأَنَا عَلَى عَهْدِكَ وَوَعْدِكَ مَا اسْتَطَعْتُ ، أَعُوذُ بِكَ مِنْ شَرِّ مَا صَنَعْتُ ، أَبُوءُ لَكَ بِنِعْمَتِكَ عَلَيَّ ، وَأَبُوءُ لَكَ بِذَنْبِي فَاغْفِرْ لِي ، فَإِنَّهُ لاَ يَغْفِرُ الذُّنُوبَ إِلَّا أَنْتَ. </item>
        <item name="2">
بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم \n\n قُلْ هُوَ اللَّهُ أَحَدٌ (1) اللَّهُ الصَّمَدُ (2) لَمْ يَلِدْ وَلَمْ يُولَدْ (3) وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَدٌ (4)                    </item>

        بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم \n\n
        قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ (1) مِنْ شَرِّ مَا خَلَقَ (2) وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ (3) وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ (4) وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ (5)

        بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم \n\n قُلْ أَعُوذُ بِرَبِّ النَّاسِ (1) مَلِكِ النَّاسِ (2) إِلَهِ النَّاسِ (3) مِنْ شَرِّ الْوَسْوَاسِ الْخَنَّاسِ (4) الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ (5) مِنَ الْجِنَّةِ وَالنَّاسِ (6)
        <item name="3"> أَعُوذُ بِكَلِمَاتِ اللهِ التَّامَّاتِ مِنْ شَرِّ مَا خَلَقَ. </item>
        <item name="4"> قُلْ اللَّهُمَّ فَاطِرَ السَّمَوَاتِ وَالْأَرْضِ ، عَالِمَ الْغَيْبِ وَالشَّهَادَةِ ، لَا إِلَهَ إِلَّا أَنْتَ رَبَّ كُلِّ شَيْءٍ وَمَلِيكَهُ ، أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي ، وَمِنْ شَرِّ الشَّيْطَانِ وَشِرْكِهِ ، وَأَنْ أَقْتَرِفَ عَلَى نَفْسِي سُوءًا أَوْ أَجُرَّهُ إِلَى مُسْلِمٍ. </item>
        <item name="5"> اللَّهُمَّ إِنِّي أَسْأَلُكَ الْعَافِيَةَ فِي الدُّنْيَا وَالْآخِرَةِ ، اللَّهُمَّ إِنِّي أَسْأَلُكَ الْعَفْوَ وَالْعَافِيَةَ فِي دِينِي وَدُنْيَايَ وَأَهْلِي وَمَالِي ، اللَّهُمَّ اسْتُرْ عَوْرَاتِي وَآمِنْ رَوْعَاتِي ، اللَّهُمَّ احْفَظْنِي مِنْ بَيْنِ يَدَيَّ ، وَمِنْ خَلْفِي ، وَعَنْ يَمِينِي ، وَعَنْ شِمَالِي ، وَمِنْ فَوْقِي ، وَأَعُوذُ بِعَظَمَتِكَ أَنْ أُغْتَالَ مِنْ تَحْتِي. </item>
        <item name="6"> اللَّهُمَّ بِكَ أَمْسَيْنَا ، وَبِكَ أَصْبَحْنَا ، وَبِكَ نَحْيَا ، وَبِكَ نَمُوتُ ، وَإِلَيْكَ الْمَصِيرُ. </item>
        <item name="7"> يَا حَيُّ يَا قَيُّومُ بِرَحْمَتِكَ أَسْتَغِيثُ ، أَصْلِحْ لِي شَأْنِي كُلَّهُ ، وَلَا تَكِلْنِي إِلَى نَفْسِي طَرْفَةَ عَيْنٍ. </item>
        <item name="8"> أَمْسَيْنَا وَأَمْسَى الْمُلْكُ لِلَّهِ ، وَالْحَمْدُ لِلَّهِ لَا إِلَهَ إِلَّا اللهُ ، وَحْدَهُ لَا شَرِيكَ لَهُ ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ ، رَبِّ أَسْأَلُكَ خَيْرَ مَا فِي هَذِهِ اللَّيْلَةِ وَخَيْرَ مَا بَعْدَهَا ، وَأَعُوذُ بِكَ مِنْ شَرِّ مَا فِي هَذِهِ اللَّيْلَةِ وَشَرِّ مَا بَعْدَهَا ، رَبِّ أَعُوذُ بِكَ مِنَ الْكَسَلِ وَسُوءِ الْكِبَرِ ، رَبِّ أَعُوذُ بِكَ مِنْ عَذَابٍ فِي النَّارِ وَعَذَابٍ فِي الْقَبْرِ.  </item>
        <item name="9"> رَضِيتُ بِاللهِ رَبًّا ، وَبِالْإِسْلَامِ دِينًا ، وَبِمُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ نَبِيًّا. </item>
        <item name="10"> بِسْمِ اللَّهِ الَّذِي لَا يَضُرُّ مَعَ اسْمِهِ شَيْءٌ فِي الْأَرْضِ وَلَا فِي السَّمَاءِ وَهُوَ السَّمِيعُ الْعَلِيمُ. </item>
        <item name="11"> سُبْحَانَ اللهِ وَبِحَمْدِهِ ، عَدَدَ خَلْقِهِ وَرِضَا نَفْسِهِ وَزِنَةَ عَرْشِهِ وَمِدَادَ كَلِمَاتِهِ. </item>
        <item name="12"> اللّهُـمَّ إِنِّـي أَمسيتُ أُشْـهِدُك، وَأُشْـهِدُ حَمَلَـةَ عَـرْشِـك، وَمَلَائِكَتَكَ، وَجَمـيعَ خَلْـقِك، أَنَّـكَ أَنْـتَ اللهُ لا إلهَ إلاّ أَنْـتَ وَحْـدَكَ لا شَريكَ لَـك، وَأَنَّ ُ مُحَمّـدًا عَبْـدُكَ وَرَسـولُـك </item>
        <item name="13"> اللهم صل و سلم و بارك على محمد وآله. </item>
        <item name="14"> سُبْحَانَ اللهِ وَبِحَمْدِهِ. </item>
        <item name="15"> لَا إِلَهَ إِلَّا اللَّهُ وَحْدَهُ لَا شَرِيكَ لَهُ ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ. </item>

    </string-array>
    <string-array name="athkar_sabah">

        <item name="1"> اللَّهُمَّ أَنْتَ رَبِّي لاَ إِلَهَ إِلَّا أَنْت َ، خَلَقْتَنِي وَأَنَا عَبْدُكَ ، وَأَنَا عَلَى عَهْدِكَ وَوَعْدِكَ مَا اسْتَطَعْتُ ، أَعُوذُ بِكَ مِنْ شَرِّ مَا صَنَعْتُ ، أَبُوءُ لَكَ بِنِعْمَتِكَ عَلَيَّ ، وَأَبُوءُ لَكَ بِذَنْبِي فَاغْفِرْ لِي ، فَإِنَّهُ لاَ يَغْفِرُ الذُّنُوبَ إِلَّا أَنْتَ. </item>
        <item name="2">
بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم \n\n قُلْ هُوَ اللَّهُ أَحَدٌ (1) اللَّهُ الصَّمَدُ (2) لَمْ يَلِدْ وَلَمْ يُولَدْ (3) وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَدٌ (4)\n\n
        بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم
        \n\nقُلْ أَعُوذُ بِرَبِّ الْفَلَقِ (1) مِنْ شَرِّ مَا خَلَقَ (2) وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ (3) وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ (4) وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ (5)
        \n\nبِسْمِ اللهِ الرَّحْمنِ الرَّحِيم \n\n قُلْ أَعُوذُ بِرَبِّ النَّاسِ (1) مَلِكِ النَّاسِ (2) إِلَهِ النَّاسِ (3) مِنْ شَرِّ الْوَسْوَاسِ الْخَنَّاسِ (4) الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ (5) مِنَ الْجِنَّةِ وَالنَّاسِ (6)</item>
        <item name="3">أَصبَحْنا على فِطرةِ الإسلامِ، وكَلِمةِ الإخلاصِ، ودِينِ نَبيِّنا محمَّدٍ صلَّى اللهُ عليه وسلَّمَ، ومِلَّةِ أبِينا إبراهيمَ، حَنيفًا مُسلِمًا، وما كان مِنَ المُشرِكينَ</item>
        <item name="4"> قُلْ اللَّهُمَّ فَاطِرَ السَّمَوَاتِ وَالْأَرْضِ ، عَالِمَ الْغَيْبِ وَالشَّهَادَةِ ، لَا إِلَهَ إِلَّا أَنْتَ رَبَّ كُلِّ شَيْءٍ وَمَلِيكَهُ ، أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي ، وَمِنْ شَرِّ الشَّيْطَانِ وَشِرْكِهِ ، وَأَنْ أَقْتَرِفَ عَلَى نَفْسِي سُوءًا أَوْ أَجُرَّهُ إِلَى مُسْلِمٍ. </item>
        <item name="5"> اللَّهُمَّ إِنِّي أَسْأَلُكَ الْعَافِيَةَ فِي الدُّنْيَا وَالْآخِرَةِ ، اللَّهُمَّ إِنِّي أَسْأَلُكَ الْعَفْوَ وَالْعَافِيَةَ فِي دِينِي وَدُنْيَايَ وَأَهْلِي وَمَالِي ، اللَّهُمَّ اسْتُرْ عَوْرَاتِي وَآمِنْ رَوْعَاتِي ، اللَّهُمَّ احْفَظْنِي مِنْ بَيْنِ يَدَيَّ ، وَمِنْ خَلْفِي ، وَعَنْ يَمِينِي ، وَعَنْ شِمَالِي ، وَمِنْ فَوْقِي ، وَأَعُوذُ بِعَظَمَتِكَ أَنْ أُغْتَالَ مِنْ تَحْتِي. </item>
        <item name="6"> اللهُمَّ بِكَ أَصْبَحْنَا ، وَبِكَ أَمْسَيْنَا ، وَبِكَ نَحْيَا ، وَبِكَ نَمُوتُ ، وَإِلَيْكَ النُّشُورُ. </item>
        <item name="7"> يَا حَيُّ يَا قَيُّومُ بِرَحْمَتِكَ أَسْتَغِيثُ ، أَصْلِحْ لِي شَأْنِي كُلَّهُ ، وَلَا تَكِلْنِي إِلَى نَفْسِي طَرْفَةَ عَيْنٍ. </item>
        <item name="8"> أَصْبَحْنَا وَأَصْبَحَ الْمُلْكُ لِلَّهِ ، وَالْحَمْدُ لِلَّهِ لَا إِلَهَ إِلَّا اللهُ ، وَحْدَهُ لَا شَرِيكَ لَهُ ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ ، رَبِّ أَسْأَلُكَ خَيْرَ مَا فِي هَذِا اليَوم وَخَيْرَ مَا بَعْدَهُ ، وَأَعُوذُ بِكَ مِنْ شَرِّ مَا فِي هَذِا اليَوم وَشَرِّ مَا بَعْدَهُ ، رَبِّ أَعُوذُ بِكَ مِنَ الْكَسَلِ وَسُوءِ الْكِبَرِ ، رَبِّ أَعُوذُ بِكَ مِنْ عَذَابٍ فِي النَّارِ وَعَذَابٍ فِي الْقَبْرِ. </item>
        <item name="9"> رَضِيتُ بِاللهِ رَبًّا ، وَبِالْإِسْلَامِ دِينًا ، وَبِمُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ نَبِيًّا. </item>
        <item name="10"> بِسْمِ اللَّهِ الَّذِي لَا يَضُرُّ مَعَ اسْمِهِ شَيْءٌ فِي الْأَرْضِ وَلَا فِي السَّمَاءِ وَهُوَ السَّمِيعُ الْعَلِيمُ. </item>
        <item name="11"> سُبْحَانَ اللهِ وَبِحَمْدِهِ ، عَدَدَ خَلْقِهِ وَرِضَا نَفْسِهِ وَزِنَةَ عَرْشِهِ وَمِدَادَ كَلِمَاتِهِ. </item>
        <item name="12"> اللّهُـمَّ إِنِّـي أَصْبَحْت أُشْـهِدُك، وَأُشْـهِدُ حَمَلَـةَ عَـرْشِـك، وَمَلَائِكَتَكَ، وَجَمـيعَ خَلْـقِك، أَنَّـكَ أَنْـتَ اللهُ لا إلهَ إلاّ أَنْـتَ وَحْـدَكَ لا شَريكَ لَـك، وَأَنَّ ُ مُحَمّـدًا عَبْـدُكَ وَرَسـولُـك </item>
        <item name="13"> اللهم صل و سلم و بارك على محمد وآله. </item>
        <item name="14"> سُبْحَانَ اللهِ وَبِحَمْدِهِ. </item>
        <item name="15"> لَا إِلَهَ إِلَّا اللَّهُ وَحْدَهُ لَا شَرِيكَ لَهُ ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ. </item>

    </string-array>
    <string-array name="masaa_sanad_arr">

        <item name="1">الراوي : شداد بن أوس | المحدث : البخاري | المصدر : صحيح البخاري | الصفحة أو الرقم: 6306 | خلاصة حكم المحدث : صحيح</item>
        <item name="2"> الراوي : عبدالله بن خبيب | المحدث : ابن دقيق العيد | المصدر : الاقتراح في بيان الاصطلاح | الصفحة أو الرقم : 128 | خلاصة حكم المحدث : صحيح</item>
        <item name="3">الراوي : أبو هريرة | المحدث : ابن حجر العسقلاني | المصدر : الفتوحات الربانية | الصفحة أو الرقم: 3/95 | خلاصة حكم المحدث : صحيح</item>
        <item name="4"> الراوي : أبو راشد الحبراني | المحدث : الألباني | المصدر : صحيح الترمذي| الصفحة أو الرقم : 3529 | خلاصة حكم المحدث : صحيح</item>
        <item name="5"> الراوي : عبدالله بن عمر | المحدث : النووي | المصدر : الأذكار للنووي | الصفحة أو الرقم : 111 | خلاصة حكم المحدث : إسناده صحيح</item>
        <item name="6"> الراوي : أبو هريرة | المحدث : ابن الملقن | المصدر : ما تمس إليه الحاجة | الصفحة أو الرقم : 122 | خلاصة حكم المحدث : صحيح</item>
        <item name="7"> الراوي : أنس بن مالك | المحدث : الألباني | المصدر : صحيح الجامع | الصفحة أو الرقم : 5820 | خلاصة حكم المحدث : حسن</item>
        <item name="8"> الراوي : عبدالله بن مسعود | المحدث : مسلم | المصدر : صحيح مسلم | الصفحة أو الرقم : 2723 | خلاصة حكم المحدث : صحيح</item>
        <item name="9"> رواه ابن أبي شيبة في " المصنف " (6/36)، وعبد بن حميد في " المسند " (ص308)، وأبوداود في " السنن " (رقم/1529)، والنسائي في " السنن الكبرى " (9/7)، وابن حبان في " صحيحه " (3/144)، والحاكم في " المستدرك " (1/699) وقال : " هذا حديث صحيح الإسناد ولم يخرجاه " </item>
        <item name="10"> الراوي : عثمان بن عفان | المحدث : شعيب الأرناؤوط | المصدر : تخريج المسند لشعيب | الصفحة أو الرقم : 446 | خلاصة حكم المحدث : إسناده حسن</item>
        <item name="11"> الراوي : جويرية بنت الحارث أم المؤمنين | المحدث : مسلم | المصدر : صحيح مسلم | الصفحة أو الرقم : 2726 | خلاصة حكم المحدث : صحيح</item>
        <item name="12"> قال الحاكم: هذا حديث صحيح الإسناد ولم يُخَرِّجَاه. وصححه الألباني. </item>
        <item name="13"> رواه الطبراني و قد حسنه بعض أهل العلم و أكثر أهل العلم على ضعفه </item>
        <item name="14"> الراوي : أبو هريرة | المحدث : مسلم | المصدر : صحيح مسلم | الصفحة أو الرقم : 2692 | خلاصة حكم المحدث : صحيح. </item>
        <item name="15"> الراوي : أبو هريرة | المحدث : البخاري | المصدر : صحيح البخاري |الصفحة أو الرقم : 6403 | خلاصة حكم المحدث : صحيح.</item>

    </string-array>
</resources>